[gd_scene load_steps=4 format=3 uid="uid://bo38xlvnah2jr"]

[ext_resource type="Theme" uid="uid://cfjmfbcfpkmfa" path="res://user_interface/theme.tres" id="1_3fekh"]
[ext_resource type="Script" uid="uid://rc1sk654elyj" path="res://user_interface/options/options.gd" id="2_epys8"]
[ext_resource type="PackedScene" uid="uid://dgnxqfyy1njwn" path="res://user_interface/leaderboard/leaderboard.tscn" id="3_cttjh"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3fekh")
script = ExtResource("2_epys8")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FullscreenButton" type="CheckButton" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Fullscreen  "

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"OptionsButton"
theme_override_font_sizes/font_size = 24
text = "Go back!"

[node name="QuitButton" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"OptionsButton"
theme_override_font_sizes/font_size = 24
text = "Quit!"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Leaderboard" parent="VBoxContainer" instance=ExtResource("3_cttjh")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="CreditsHeader" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"OptionsLabel"
theme_override_font_sizes/font_size = 32
text = "Credits!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsBody" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"OptionsLabel"
theme_override_constants/line_spacing = -10
theme_override_font_sizes/font_size = 24
text = "Game & models created by Alex Garbus.

Made with Godot Engine: godotengine.org/license

Racing Sans One font by Impallari  Type.

Sounds via Pixabay: Diesel Horn 02 by thepodcastdoctor, Steam Train at Crossing by Mark_MPT,
metal impact by u_ml52e3xzf7, buzzer by connieconnie12, & cartoon slide sound effect by reasanka"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="toggled" from="VBoxContainer/ButtonContainer/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
